kubernetes/traefik/middlewares.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ipallowlist
  namespace: traefik
spec:
  ipAllowList:
    sourceRange:
      - 127.0.0.1/32
      - 10.0.0.0/8
      - 192.168.0.0/16
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwardauth
  namespace: traefik
spec:
  forwardAuth:
    address: http://tinyauth.traefik.svc.cluster.local:3000/api/auth/traefik
