kubernetes/traefik/dashboard-ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.axis.scottmckendry.tech`)
      kind: Rule
      middlewares:
        - name: ipallowlist
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
