kubernetes/traefik/tinyauth.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyauth
  namespace: traefik
  labels:
    app: tinyauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyauth
  template:
    metadata:
      labels:
        app: tinyauth
    spec:
      containers:
        - name: tinyauth
          image: ghcr.io/steveiliop56/tinyauth:v4.0.0@sha256:9e8fb9d58dc69031af395fd570ada147c6c7b98b29c036971bf69738b73d71b0
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tinyauth
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/service.json
apiVersion: v1
kind: Service
metadata:
  name: tinyauth
  namespace: traefik
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: tinyauth
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth
  namespace: traefik
spec:
  routes:
    - match: Host(`auth.axis.scottmckendry.tech`)
      kind: Rule
      services:
        - name: tinyauth
          namespace: traefik
          port: 3000
  tls:
    secretName: axis-tls
