kubernetes/traefik/whoami-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.axis.scottmckendry.tech`)
      kind: Rule
      middlewares:
        - name: ipallowlist
          namespace: traefik
      services:
        - name: whoami
          port: 80
  tls:
    secretName: axis-staging-tls
